add deploy app name

--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -17,6 +17,7 @@ variables:
       ENVIRONMENT_NAME: "mfe-host"
       BUILD_PREFIX_COMMAND: "mfe-host"
       AZURE_SUBSCRIPTION: "Azure for Students(1)(121f6adb-a21e-4a35-a892-c1609c3b5952)"
+      DEPLOY_APP_NAME: "affi-challenge-web"
 
 pool:
   vmImage: $(vmImageName)
@@ -41,4 +42,4 @@ stages:
       stageDisplayName: Deploy stage ${{ variables.appName }}
       environmentName: "stage"
       stageDependsOn: build_mfe_host
-      webAppName: "affi-challenge-web"
+      deployAppName: ${{ variables.deployAppName }}
