--- a/azure-pipelines/templates/deploy-web-app-type-template.yml
+++ b/azure-pipelines/templates/deploy-web-app-type-template.yml
@@ -17,5 +17,5 @@ stages:
                     azureSubscription: $(appAzureSubscription)
                     appType: webAppLinux
                     appName: $(deployAppName)
-                    package: $(Pipeline.Workspace)/drop/${{ parameters.appArtifactPath }}-$(Build.BuildId).zip
+                    package: $(Pipeline.Workspace)/drop/$(appArtifactPath)-$(Build.BuildId).zip
                     runtimeStack: $(deployRuntimeStack)
