--- a/azure-pipelines/azure-pipelines-mfe-auth.yml
+++ b/azure-pipelines/azure-pipelines-mfe-auth.yml
@@ -18,6 +18,9 @@ variables:
       BUILD_PREFIX_COMMAND: "mfe-auth"
       AZURE_SUBSCRIPTION: "Azure for Students(1)(121f6adb-a21e-4a35-a892-c1609c3b5952)"
       DEPLOY_APP_NAME: "affi-challenge-auth-web"
+      ENVIRONMENT_VARIABLES:
+        - variableName: "MS_API_URL"
+          value: "localhost"
 
 pool:
   vmImage: $(vmImageName)
