--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -29,6 +29,13 @@ stages:
               npm ci
             displayName: "Angular CLI $(angularCliVersion) and Install dependencies"
 
+          - ${{ each customEnv in parameters.environmentVariables }}
+          - ${{ each customEnvValue in customEnv.variableValue}}
+          - script: |
+              echo "Setting variable ${{ customEnv.variableName }}"
+              echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnvValue }}"
+            displayName: "Set Environment Variable"
+
           - script: $(appBuildCommandProd)
             displayName: "Build $(appName)"
 
