--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -36,7 +36,7 @@ stages:
     parameters:
       stageName: build_mfe_host
       stageDisplayName: ${{ variables.appName }}
-      environmentVariables: $(environmentVariables)
+      environmentVariables: ${{ parameters.environmentVariables }}
 
   # - template: templates/deploy-function-type-template.yml
   #   parameters:
