--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -25,9 +25,9 @@ parameters:
     type: object
     default:
       - variableName: "MS_API_URL"
-        variableVaule: $(MS_API_URL)
+        variableValue: $(MS_API_URL)
       - variableName: "MFE_AUTH_URL"
-        variableVaule: $(MFE_AUTH_URL)
+        variableValue: $(MFE_AUTH_URL)
 pool:
   vmImage: $(vmImageName)
 
