--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -30,9 +30,10 @@ stages:
             displayName: "Angular CLI $(angularCliVersion) and Install dependencies"
 
           - ${{ each customEnv in parameters.environmentVariables }}:
-              - script: |
-                  echo "Setting variable ${{ customEnv.variableName }}"
-                  echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
+              - script: echo "Setting variable ${{ customEnv.variableName }}"
+                # - script: |
+                #     echo "Setting variable ${{ customEnv.variableName }}"
+                #     echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
             displayName: "Set Environment Variable"
 
           - script: $(appBuildCommandProd)
