--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -7,12 +7,17 @@ stages:
       - job: build
         displayName: Build  ${{ parameters.stageDisplayName }}
         steps:
-          - ${{ each customEnv in parameters.environmentVariables }}:
-              - script: echo "Setting variable ${{ customEnv.variableName }}"
-                # - script: |
-                #     echo "Setting variable ${{ customEnv.variableName }}"
-                #     echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
+          - ${{ each parameter in parameters }}:
+              - script: echo ${{ parameter.Key }}
+              - script: echo ${{ parameter.Value }}
             displayName: "Set Environment Variable"
+
+          # - ${{ each customEnv in parameters.environmentVariables }}:
+          #     - script: echo "Setting variable ${{ customEnv.variableName }}"
+          #       # - script: |
+          #       #     echo "Setting variable ${{ customEnv.variableName }}"
+          #       #     echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
+          #   displayName: "Set Environment Variable"
 
           # Install node
           - task: NodeTool@0
