--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -37,7 +37,7 @@ stages:
     parameters:
       stageName: build_mfe_host
       stageDisplayName: ${{ variables.appName }}
-      environmentVariables: ${{ parameters.environmentVariables }}
+      # environmentVariables: ${{ parameters.environmentVariables }}
       # set_env:
       #   # - script: echo "##vso[task.setvariable variable=MFE_AUTH_URL]$(MFE_AUTH_URL)"
       #   #   displayName: "set env MFE_AUTH_URL"
