--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -20,14 +20,14 @@ variables:
       DEPLOY_APP_NAME: "affi-challenge-web"
       DEPLOY_APP_TYPE: "webApp"
 
-parameters:
-  - name: environmentVariables
-    type: object
-    default:
-      - variableName: "MS_API_URL"
-        variableValue: $(MS_API_URL)
-      - variableName: "MFE_AUTH_URL"
-        variableValue: $(MFE_AUTH_URL)
+# parameters:
+#   - name: environmentVariables
+#     type: object
+#     default:
+#       - variableName: "MS_API_URL"
+#         variableValue: $(MS_API_URL)
+#       - variableName: "MFE_AUTH_URL"
+#         variableValue: $(MFE_AUTH_URL)
 
 pool:
   vmImage: $(vmImageName)
