add stage name and stage display name to build template parameters

--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -1,4 +1,10 @@
 parameters:
+  - name: stageName
+    type: string
+    default: "Build dev"
+  - name: stageDisplayName
+    type: string
+    default: "Dev"
   - name: set_env
     type: stepList
     default: []
