--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -46,11 +46,11 @@ stages:
           - ${{ each step in parameters.set_env }}:
               - ${{ step }}
 
-          - ${{ each customEnv in parameters.environmentVariables }}:
-              - script: |
-                  echo "Setting variable ${{ customEnv.variableName }}"
-                  echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
-            displayName: "Set Environment Variable"
+          # - ${{ each customEnv in parameters.environmentVariables }}:
+          #     - script: |
+          #         echo "Setting variable ${{ customEnv.variableName }}"
+          #         echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
+          #   displayName: "Set Environment Variable"
 
           - script: $(appBuildCommandProd)
             displayName: "Build $(appName)"
