--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -52,8 +52,8 @@ stages:
           #         echo "##vso[task.setvariable variable=${{ customEnv.variableName}};]${{ customEnv.variableValue }}"
           #   displayName: "Set Environment Variable"
 
-          - script: $(appBuildCommandProd)
-            displayName: "Build $(appName)"
+          # - script: $(appBuildCommandProd)
+          #   displayName: "Build $(appName)"
 
           # Archive build artifacts
           - task: ArchiveFiles@2
