Update azure-pipelines-mfe-host.yml for Azure Pipelines

--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -39,12 +39,12 @@ stages:
       stageDisplayName: ${{ variables.appName }}
       # environmentVariables: ${{ parameters.environmentVariables }}
       set_env:
-        - script: echo "##vso[task.setvariable variable=MFE_AUTH_URL]$(MFE_AUTH_URL)"
-          displayName: "set env MFE_AUTH_URL"
-        # - script: $(appBuildCommandProd)
-        #   displayName: "Build ${{ variables.appName }}"
-        #   env:
-        #     MFE_AUTH_URL: $(MFE_AUTH_URL)
+        # - script: echo "##vso[task.setvariable variable=MFE_AUTH_URL]$(MFE_AUTH_URL)"
+        #   displayName: "set env MFE_AUTH_URL"
+        - script: $(appBuildCommandProd)
+          displayName: "Build ${{ variables.appName }}"
+          env:
+            MFE_AUTH_URL: $(MFE_AUTH_URL)
 
   # - template: templates/deploy-function-type-template.yml
   #   parameters:
