--- a/azure-pipelines/azure-pipelines-mfe-host.yml
+++ b/azure-pipelines/azure-pipelines-mfe-host.yml
@@ -28,11 +28,13 @@ stages:
     parameters:
       stageName: build_mfe_host
       stageDisplayName: ${{ variables.appName }}
-      set_env:
-        - script: $(appBuildCommandProd)
-          displayName: "Build ${{ variables.appName }}"
-          env:
-            MFE_AUTH_URL: $(MFE_AUTH_URL)
+      # set_env:
+      #   - script: $(appBuildCommandProd)
+      #     displayName: "Build ${{ variables.appName }}"
+      #     env:
+      #       MFE_AUTH_URL: $(MFE_AUTH_URL)
+      env:
+        MFE_AUTH_URL: $(MFE_AUTH_URL)
 
   # - template: templates/deploy-function-type-template.yml
   #   parameters:
