add env parameter def in build

--- a/azure-pipelines/templates/build-template.yml
+++ b/azure-pipelines/templates/build-template.yml
@@ -11,6 +11,9 @@ parameters:
   - name: environmentVariables
     type: object
     default: []
+  - name: env
+    type: object
+    default: []
 
 stages:
   - stage: ${{ parameters.stageName }}
